# OnlyFAMCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RR.md  SETUP_EXTERNAL.md  build.sh  server_config.json
qml/: AppContainer.qml  AuthWindow.qml  LoginWindow.qml  MainMenu.qml  SimpleApp.qml  SimpleApp_broken.qml  main.qml  minimal.qml  test.qml
server/: .env.example  Dockerfile  README.md  auth.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt
src/: AuthManager.cpp  AuthManager.h  CameraHandler.cpp  CameraHandler.h  SignalingClient.cpp  SignalingClient.h  VideoChatApp.cpp  VideoChatApp.h  WebRTCManager.cpp  WebRTCManager.h  main.cpp
